<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Main!</string>
    <string name="app_name">INoodles</string>
    <string name="button_countdown">Noodles Timer</string>
    <string name="button_get_reviews">Get Reviews</string>
    <string name="button_add_review">Add Review</string>
    <string name="button_send">Send</string>
    <string name="brand">Brand</string>
    <string name="take_picture">Take picture</string>
    <string name="flavour">Flavour</string>
    <string name="spicy">Picon</string>
    <string name="overall">Overall</string>
    <string name="comments">Comments</string>
    <string name="timer">Timer</string>
    <string name="barcode">Barcode</string>

</resources>